--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,7 @@ h6 {
     display: inline-block;
     min-width: 200px;
     margin-top: .5rem;
+    position: relative;
 }
 
 .single-message{
@@ -225,4 +226,12 @@ h6 {
 .sent{
     margin-left: auto;
     background-color: rgb(213, 249, 186);
+}
+
+.msg-time{
+    position: absolute;
+    bottom: 3px;
+    right: 10px;
+    text-align: right;
+    font-size: .7rem;
 }
